# sales_calculation_of_ruby_flutter_on_rust_wasm

flutter_integration/: Cargo.toml
flutter_integration/src/: lib.rs
my_flutter_app/: pubspec.yaml
my_flutter_app/lib/: main.dart
my_flutter_app/lib/src/: tax_calculator.dart
